# snowglobe

./: .gitmodules  CMakeLists.txt  README.md
avr_config/config/: CMakeLists.txt  avr_port_config.c  port_config.h  scheduler_config.h
blinktask/: CMakeLists.txt  blinktask.h
config/avr_config/config/: CMakeLists.txt  avr_port_config.c  timer_config.h
config/bluepill_config/config/: CMakeLists.txt  port_config.c  port_config.h  scheduler_config.h  ssd1306_config.h  timer_config.h  uart_config.h
main/: main.c
src/: main.c
src/blinktask/: blinktask.c
src/snow/: CMakeLists.txt  snow.c  snow.h
